--- a/wp-content/themes/colormag/style.css
+++ b/wp-content/themes/colormag/style.css
@@ -2198,6 +2198,22 @@ a#scroll-up:hover {
    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
    font-size: 14px;
 }
+
+.contact-us {
+	margin: auto;
+	width: 50%;
+}
+
+.contact_details {
+	list-style: none;
+	display: inline;
+}
+
+.contact_details li {
+	float: left;
+}
+
+
 .breaking-news {
    float: left;
 }
