link to old site + more changes

--- a/wp-content/themes/colormag/style.css
+++ b/wp-content/themes/colormag/style.css
@@ -2219,6 +2219,11 @@ a#scroll-up:hover {
 	margin-left: 10px;
 }
 
+.custom-message-old-ste {
+	text-align: center;
+	text-decoration-style: double;
+}
+
 
 .breaking-news {
    float: left;
